@@ -2,6 +2,8 @@ Changelog
 =========
 
 v0.11.0:
+ - Bug fixing
+   * Consider only relevant exchanges when order average price is calculated
 
 v0.10.1:
  - Disable _new order_ button when OKPay account balance is not available
